removed all Integer and Long constructor